# bingus-blog

./: .gitignore  BUILDING.md  CONFIG.md  CUSTOM.md  Cargo.toml  README.md
partials/: post_table.hbs  span_date.hbs
src/: app.rs  append_path.rs  compress.rs  config.rs  de.rs  error.rs  filters.rs  hash_arc_store.rs  helpers.rs  main.rs  markdown_render.rs  path.rs  platform.rs  ranged_i128_visitor.rs  serve_dir_included.rs  systemtime_as_secs.rs  watcher.rs
src/post/: blag.rs  cache.rs  markdown_posts.rs  mod.rs
src/templates/: mod.rs  watcher.rs
static/: date.js  main.js  post.css  sort.js  style.css
templates/: error.html  footer.hbs  index.hbs  index.html  macros.askama  post.hbs  post.html  post_list.hbs  post_table.hbs  posts.hbs  title.hbs  view_post.html
