[package]
name = "bingus-blog"
version = "0.1.0"
edition = "2021"
default-run = "bingus-blog"

[features]
default = []
tokio-console = ["dep:console-subscriber"]

[profile.release]
lto = "fat"
opt-level = 3
strip = true

[dependencies]
askama = { version = "0.12.1", features = [
  "with-axum",
], default-features = false }
askama_axum = { version = "0.4.0", default-features = false }
axum = { version = "0.7.5", features = [
  "http1",
  "json",
  "query",
  "macros",
  "tokio",
  "tracing",
], default-features = false }
bitcode = { version = "0.6.0", features = ["serde"], default-features = false }
chrono = { version = "0.4.37", features = [
  "std",
  "serde",
], default-features = false }
color-eyre = "0.6.3"
comrak = { version = "0.22.0", features = [
  "syntect",
], default-features = false }
console-subscriber = { version = "0.2.0", optional = true }
fronma = "0.2.0"
scc = { version = "2.1.0", features = ["serde"] }
serde = { version = "1.0.197", features = ["derive"] }
syntect = "5.2.0"
thiserror = "1.0.58"
tokio = { version = "1.37.0", features = [
  "fs",
  "macros",
  "rt-multi-thread",
  "signal",
] }
tokio-util = { version = "0.7.10", default-features = false }
toml = "0.8.12"
tower-http = { version = "0.5.2", features = [
  "compression-gzip",
  "fs",
  "trace",
], default-features = false }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [
  "env-filter",
], default-features = false }
zstd = { version = "0.13.1", default-features = false }
