[package]
name = "bingus-blog"
version = "0.1.0"
edition = "2021"
default-run = "bingus-blog"
repository = "https://git.slonk.ing/slonk/bingus-blog"

[features]
default = []
tokio-console = ["dep:console-subscriber"]

[profile.release]
lto = "thin"
opt-level = 3
strip = true

[dependencies]
arc-swap = { version = "1.7.1", features = ["serde"] }
askama = { version = "0.12.1", default-features = false }
async-trait = "0.1.85"
axum = { version = "0.8.1", features = [
  "http1",
  "json",
  "query",
  "macros",
  "tokio",
  "tracing",
], default-features = false }
bitcode = { version = "0.6.0", features = ["serde"], default-features = false }
chrono = { version = "0.4.37", features = [
  "std",
  "serde",
], default-features = false }
color-eyre = "0.6.3"
comrak = { version = "0.35.0", features = [
  "syntect",
  "bon",
], default-features = false }
console-subscriber = { version = "0.4.1", optional = true }
const-str = "0.6.0"
fronma = "0.2.0"
futures = "0.3.31"
handlebars = "6.0.0"
include_dir = "0.7.4"
indexmap = { version = "2.7.0", features = ["serde"] }
mime_guess = "2.0.5"
notify-debouncer-full = { version = "0.5.0", default-features = false }
rss = "2.0.7"
scc = { version = "2.1.0", features = ["serde"] }
serde = { version = "1.0.197", features = ["derive", "rc"] }
serde-value = "0.7.0"
serde_json = { version = "1.0.124", features = ["preserve_order"] }
syntect = "5.2.0"
thiserror = "2.0.9"
tokio = { version = "1.37.0", features = [
  "fs",
  "macros",
  "rt-multi-thread",
  "signal",
  "process",
  "sync",
] }
tokio-util = { version = "0.7.10", default-features = false }
toml = "0.8.12"
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6.2", features = [
  "compression-gzip",
  "fs",
  "trace",
], default-features = false }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
url = { version = "2.5.0", features = ["serde"] }
zstd = { version = "0.13.1", default-features = false }
